--- a/css/style.css
+++ b/css/style.css
@@ -49,14 +49,14 @@ nav {
 
 /*Logo text in nav */
 .brand-logo {
-  font-family: 'Inria Sans', sans-serif;
+  font-family: UKNumberPlate;
   font-weight: 600;
   font-size: 1.7em !important; 
 }
 
 /* Banner header Title Text*/
 .banner-header-text {
-  font-family: 'Inria Sans', sans-serif;
+  font-family: UKNumberPlate;
   font-size: 4em;
   font-weight: 400;
 }
@@ -75,6 +75,21 @@ nav {
 
   padding-left: 1%;
   padding-right: 1%;;
+}
+
+/* Banner header Title Text BG*/
+.banner-header-text-bg-green {
+  background-color:#2e7e31;
+
+  padding-left: 0.2em;
+  padding-right: 0.2em;
+  padding-top: 0.2em;
+  padding-bottom: 0.2em;
+}
+
+/* Nav Title Text*/
+.banner-header-text-blue {
+  color:#0D47A1;
 }
 
 /* Banner header Title Text BG*/
